--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Markdown==3.3.4
 MarkupSafe==2.0.1
 mysqlclient==2.0.3
 openapi-codec==1.3.2
+psycopg2==2.9.2
 PyJWT==2.3.0
 python-decouple==3.5
 pytz==2021.3
