--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+anytree==2.8.0
 asgiref==3.4.1
 certifi==2021.10.8
 charset-normalizer==2.0.9
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.9
+django-admin-csvexport==1.11
 django-filter==21.1
 django-rest-swagger==2.2.0
 djangorestframework==3.12.4
@@ -15,12 +17,12 @@ Markdown==3.3.4
 MarkupSafe==2.0.1
 mysqlclient==2.0.3
 openapi-codec==1.3.2
-psycopg2==2.9.2
 PyJWT==2.3.0
 python-decouple==3.5
 pytz==2021.3
 requests==2.26.0
 simplejson==3.17.6
+six==1.16.0
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.7
