--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.9
 django-admin-csvexport==1.11
+django-cors-headers==3.11.0
 django-filter==21.1
 django-rest-swagger==2.2.0
 djangorestframework==3.12.4
